1.4.0.3:
    - Added missing checks that mcc152_open() has been called in the MCC 152 DIO functions.
    - Fixed issues preventing library building in Bullseye.

1.4.0.2:
    - Fixed issue with firmware_version() method in Python for the MCC 128.

1.4.0.1:
    - Fixed convert timing issue and hang on scan stop when set to external clock and no 
      clock present on MCC 128.
    - Fixed continuous scan overrun issue on MCC 128.
    - Fixed issues in some MCC 128 examples.

1.4.0:
    - Added support for the MCC 128.

1.3.0.6:
    - Fixed error where free(custom_data) was called twice in mcc172.c.
    - Fixed problem with the Python method interrupt_callback_enable().
    - Changed the installer to automatically enable SPI.
    - Changed daqhats_read_eeproms to automatically enable I2C if needed.
    - Fixed trigger issue on MCC 172 (fix is in firmware version 1.01.)

1.3.0.5:
    - Fixed error when calling mcc172_a_in_clock_config_write() immediately after another
      function that communicates with the board.

1.3.0.4:
    - Added sensitivity factor setting to the MCC 172 data.

1.3.0.3:
    - Added error reporting if user passes OPTS_EXTCLOCK when starting a scan on MCC 172.
    - Clarified MCC 172 documentation.

1.3.0.2:
    - Added support for rev 2 MCC 172 boards.

1.3.0.1:
    - Fixed scan bug from 1.2.0.3 for the MCC 172.

1.3.0:
    - Added support for the MCC 172.

1.2.0.4:
    - Fixed mismatch in error message strings in the C library.
    - Clarified the address jumper settings in the documentation.

1.2.0.3:
    - Fixed bug in MCC 118 scan data read functions where a 16-bit variable was
    used instead of 32 bits, so more than 64K samples per channel in the scan
    buffer would not be read at a time.
    - Fixed issue reading daqhat EEPROMs in newer versions of Raspbian Buster.
    - Added information on MCC 118 OEM.
    - Added daqhats_version command.
    - Added firmware version history to tools README file.

1.2.0.2: